<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/LandingPageFragment"
        android:icon="@drawable/ic_fluent_home_split_20_filled"
        android:title="@string/home" />

<!--    <item-->
<!--        android:id="@+id/myMaterialFragment"-->
<!--        android:icon="@drawable/ic_action_material"-->
<!--        android:title="@string/title_material" />-->
    <item
        android:id="@+id/courses"
        android:icon="@drawable/ic_fluent_document_bullet_list_multiple_20_regular"
        android:title="@string/courses" />
    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_fluent_heart_12_filled"
        android:title="@string/favourites" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_fluent_settings_16_filled"
        android:title="@string/settings" />

</menu>